src/test/ui/parser/raw/raw-str-long.stderr
error: unterminated raw string
  --> $DIR/raw-str-long.rs:2:13
   |
LL |     let a = r##"This
   |             ^^^ unterminated raw string
help: you might have meant to end the raw string here
   |
LL |     "##;
   |     ^^^

error: aborting due to previous error

